base/src/test/resources/failure/holes/ulf-hole-illtype.aya.txt
In file $FILE:6:29 ->

  4 | def test
  5 |  (F : Set -> Set)
  6 |  (g : Pi (X : F _) -> F (Neg X)) : Nat => g zero
                                   ^^

Error: Expected type: Set Neg.u
       Normalized: Set Neg.u
       Actual type: F {?_?}
       Normalized: F {?_?}
       They don't match, sorry
In file $FILE:6:16 ->

  4 | def test
  5 |  (F : Set -> Set)
  6 |  (g : Pi (X : F _) -> F (Neg X)) : Nat => g zero
                      ^^

Error: Unsolved meta
In file $FILE:6:44 ->

  4 | def test
  5 |  (F : Set -> Set)
  6 |  (g : Pi (X : F _) -> F (Neg X)) : Nat => g zero
                                                  ^--^

Error: Expected type: F <{?_?}>
       Normalized: F <{?_?}>
       Actual type: Nat
       Normalized: Nat
       They don't match, sorry
In file $FILE:6:42 ->

  4 | def test
  5 |  (F : Set -> Set)
  6 |  (g : Pi (X : F _) -> F (Neg X)) : Nat => g zero
                                                ^----^

Error: Expected type: Nat
       Normalized: Nat
       Actual type: F (Neg <X>)
       Normalized: F (Pi (_ : <X>) -> Empty)
       They don't match, sorry
What are you doing?
